@@ -1,5 +1,10 @@
 2004-02-12  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file-operations.c (confirm_empty_trash)
+	Make trash dialog transient to window group.
+
+2004-02-12  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file.c (nautilus_extract_top_left_text):
 	Better handling of utf8 text.
 	(nautilus_file_rename):
